# moodle-scraper

./: Cargo.toml  Dockerfile  README.md
src/: course_prefs.rs  main.rs  scraper.rs
src/moodle_client/: error.rs  mod.rs  models.rs
src/utils/: mod.rs
