[package]
name = "moodle-scraper"
version = "0.1.0"
authors = ["Barnabás Rátki <barna.ratki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.10", features = ["blocking", "json"] }