[package]
name = "moodlescraper"
version = "0.1.0"
authors = ["Barnabás Rátki <barna.ratki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.12.0"
reqwest = { version = "0.10.8", features = ["blocking", "json","cookies","native-tls"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
thiserror = "1.0.20"